--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "nanoid": "^5.0.6",
     "next": "14.1.3",
+    "next-cloudinary": "^6.3.0",
     "next-themes": "^0.2.1",
     "openai": "^4.28.4",
     "pnpm": "^8.15.4",
